Dark mode CSS – Teambuilder (Fix Some Colors)
It doesn't look better with this color: #FFF
as it should be: #DDD
better not to modify it, alright

--- a/style/client.css
+++ b/style/client.css
@@ -3427,7 +3427,7 @@ a.ilink.yours {
 .dark .utilichart .namecol,
 .dark .utilichart .pokemonnamecol,
 .dark .utilichart .movenamecol {
-	color: #FFF;
+	color: #DDD;
 }
 .dark .utilichart .cur .labelcol em,
 .dark .utilichart .cur .widelabelcol em,
